--- a/index.scss
+++ b/index.scss
@@ -63,6 +63,16 @@ header {
   text-decoration: underline;
 }
 
+.pfp {
+  border-radius: 50%;
+  border: #fcf7f7 solid 2px;
+}
+
+.big {
+  font-size: 4rem;
+  font-weight: bold;
+}
+
 .row {
   display: flex;
   flex-direction: row;
@@ -94,9 +104,17 @@ header {
     height: 64px;
     user-select: none;
   }
-}
-@for $i from 0 through $max-rot-instances {
   #ArchLogoComponent-#{$i} {
+    position: relative;
+    cursor: pointer;
+    margin: 25px;
+    margin-top: 40px;
+    margin-bottom: 15px;
+    width: 48px;
+    height: 48px;
+    user-select: none;
+  }
+  #NeovimComponent-#{$i} {
     position: relative;
     cursor: pointer;
     margin: 25px;
@@ -135,5 +153,32 @@ header {
   } 
   to {
     transform: rotate(360deg) scale(var(--scale-val));
+  }
+}
+
+
+
+.appear-left {
+  transition: 1s;
+  color: transparent;
+  transform: translate(0px, 0px);
+}
+.appear-right{
+  transition: 1s;
+  color: transparent;
+  transform: translate(0px, 0px);
+}
+
+.text-appear:hover {
+
+  .appear-left {
+    transition: 1s;
+    color: #fcf7f7;
+    transform: translate(-50px, 0px);
+  }
+  .appear-right {
+    transition: 1s;
+    color: #fcf7f7;
+    transform: translate(50px, 0px);
   }
 }
