--- a/index.scss
+++ b/index.scss
@@ -13,6 +13,10 @@
   // other
 }
 
+hr {
+  color: #fcf7f75e;
+}
+
 $layers-num: 64;
 $max-rot-instances: 12;
 
@@ -35,7 +39,6 @@ header {
   background-color: #00000033;
   backdrop-filter: blur(6px);
 }
-
 
 .center-horizontal {
   display: flex;
